--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -34,6 +34,22 @@ tags:
                         <p id="sentimen__sponsor">Kata kata ini disponsori oleh KICIKKU</p>
                         <p id="japan__type">木シック</p>
                     </div>
+                    <div id="sentimen__crews">
+                        <div>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        </div>
+                        <div>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        </div>
+                    </div>
                 </div>
         </div>
         <div id="sentimen__foot">
