--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -6,9 +6,10 @@
         border-radius: 1em;
     }
 
-    h1, h2, h3 {
+    h1, h2, h3, h4 {
         font-weight: 400;
-        font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace; 
+        font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+        color: #252525;
     }
 }
 
