--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -21,7 +21,7 @@ tags:
                             <h2 id="badge-text">FREE MORNING SNACK</h2>
                         </div>
                         <div class="orange-badge">
-                            <h2 id="badge-text">VOUCHER AVAILABLE</h2>
+                            <h2 id="badge-text">SUMMER RELEASE VOUCHER AVAILABLE</h2>
                         </div>
                         <div class="orange-badge">
                             <h2 id="badge-text">INDONESIAN ONLY</h2>
@@ -35,19 +35,19 @@ tags:
                         <p id="japan__type">木シック</p>
                     </div>
                     <div id="sentimen__crews">
-                        <div>
+                        <div style="display: flex; flex-direction: column; justify-content: flex-start;">
                         <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>LEAD PRODUCTIOON..........................DIANA RISA</p>
+                        <p>ASSOCIATESS PRODUCTIOON...................KANG GHEEAA</p>
+                        <p>WARDROBE PRODUUCTION......................GHINA AMELIA RISKIA</p>
+                        <p>FIELD RESEARCHES..........................WINDA JUNG</p>
                         </div>
                         <div>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
-                        <p>PRODUCTIOON...............................PERTAMAX WAVE</p>
+                        <p>ALTERNATE CREWS ASSOCIATE.................NOVA NEON NIGHT</p>
+                        <p>UNIT TOOLS LEASED.........................UPNOMORE CREDITS</p>
+                        <p>DESIGN RESEEARCH..........................LIKEY LIKEY FIRM</p>
+                        <p>CONTENT REASPONSIBLE......................AAAAA CELINE</p>
+                        <p>SCIENCE GOODS............................MARJUKI LABS</p>
                         </div>
                     </div>
                 </div>
