--- a/src/scss/pages/_homepage.scss
+++ b/src/scss/pages/_homepage.scss
@@ -52,17 +52,17 @@
         }
     }
 
-    &:hover::after, &:focus::after {
-        content: var(--bg-img-src, "");
-        background-size: 500px;
-        top: 0;
-        right: 0;
-        position: absolute;
-        max-width: 600px;
-        max-height: 600px;
-        background-color: black;
-        color: white;
-    }
+    // &:hover::after, &:focus::after {
+    //     // content: var(--bg-img-src, "");
+    //     // background-size: 500px;
+    //     top: 0;
+    //     right: 0;
+    //     position: absolute;
+    //     max-width: 600px;
+    //     max-height: 600px;
+    //     background-color: black;
+    //     color: white;
+    // }
     
 }
 
