--- a/src/site/_includes/layouts/main.njk
+++ b/src/site/_includes/layouts/main.njk
@@ -23,7 +23,7 @@ layout: 'layouts/base'
             <p class="header__row">Status</p>
         </div>
         {% for feed in paged | reverse %}
-            <article class="card" style="--bg-img-src: url({{ feed.data.cover }});" cover-image="{{ feed.data.cover }}">
+            <article class="card" cover-image="{{ feed.data.cover }}">
             <a href="{{ feed.url }}" class="w-stack">
 
                 <h4>{{ feed.data.title }}</h4>
