--- a/src/site/content/feeds/kicikku-open-order.njk
+++ b/src/site/content/feeds/kicikku-open-order.njk
@@ -25,7 +25,19 @@ tags:
             <h3>For VC Service</h3>
             <h3>@KICIKKU</h3>
             </div>
-            <p id="trademark--kurva">ALL RIGHT RESERVED. KURVA DIGITAL POSTER</p>
+            <div id="flex__trademark">
+                <div class="grid-trademark">
+                    <div class="grid-trade-item">
+                    </div>
+                    <div class="grid-trade-item">
+                    </div>
+                    <div class="grid-trade-item">
+                    </div>
+                    <div id="grid-trade-inline" class="grid-trade-item">
+                    </div>
+                </div>
+                <p id="trademark--kurva">ALL RIGHT RESERVED. KURVA DIGITAL POSTER</p>
+            </div>
         </div>
     </div>
     <div id="second-poster">
