--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -40,7 +40,7 @@ pageScripts:
             </div>
             <div class="region">
             <h2>Kepada Yth:</h2>
-            <h2 class="guest-name">{{ paged.data.namaUndangan }}</h2>
+            <h2 class="guest-name">{{ paged.data.guestName }}</h2>
             <button data-drawer-close-button id="open-invitation">
                 <div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;">
                     <img alt="email-icon" src="/images/email.svg"></img>
@@ -108,7 +108,7 @@ pageScripts:
         <div class="flow">
             <h1>Namanya Si Beauty</h1>
             <h2>Putri dari</h2>
-            <p>Drs. H. Edi Saputra - Dra. Hj. Nurbainir<p>
+            <p>Beauty Father - Beauty Mother<p>
         </div>
         </div>
     </div>
@@ -117,7 +117,7 @@ pageScripts:
         <div class="flow">
             <h1>Namanya Bad Guy</h1>
             <h2>Putra dari</h2>
-            <p>Alm. Drs. Dicky Akhmad Haidir dan Enung Nurani<p>
+            <p>Bad Guy Father - Bad Guy Mother<p>
         </div>
         </div>
         <img class="bunga-border" alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img>
@@ -137,8 +137,8 @@ pageScripts:
             <div class="weeding-location invite-center">
                 <img style="filter: invert(90%) sepia(64%) saturate(1409%) hue-rotate(315deg) brightness(100%) contrast(95%);" alt="Location Icon" src="/images/location.svg"></img>
                 <h3 class="event-value">Lokasi Acara</h3>
-                <h3>Serela Riau Bandung Hotel</h3>
-                <p>Jl. L. L. R.E. Martadinata No.56, Citarum, Kec. Bandung Wetan, Kota Bandung, Jawa Barat 40115</p>
+                <h3>White Castle Hotel</h3>
+                <p>Jl. Sambas Utama Ujung Sana, Kab. Sambas, Kalbar</p>
                 <a target="_blank" href="https://goo.gl/maps/Cv2uJUcrH6eW7K9C9">
                 <div class="golden-button" id="open-location">
                     <h2>Menuju lokasi</h2>
@@ -168,7 +168,7 @@ pageScripts:
                 <img class="card-couple" src="https://cdn.pixabay.com/photo/2013/07/27/13/56/couple-168191_960_720.jpg"></img>
                 <img class="card-couple" src="https://cdn.pixabay.com/photo/2019/12/28/02/16/senior-4723737_960_720.jpg"></img>
                 <img class="card-couple" src="https://cdn.pixabay.com/photo/2019/12/28/02/16/senior-4723737_960_720.jpg"></img>
-                <img class="card-couple" src="https://cdn.pixabay.com/photo/2018/05/24/17/35/parrots-3427188_960_720.jpg></img>
+                <img class="card-couple" src="https://cdn.pixabay.com/photo/2018/05/24/17/35/parrots-3427188_960_720.jpg"></img>
             </div>
             </div>
         </web-carousel>
@@ -204,7 +204,7 @@ pageScripts:
             <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
             <h3>KAMI YANG BERBAHAGIA</h3>
             <div id="pihak-keluarga" class="auto-grid region">
-            <div id="kel-flex"><h2>Kel. Bpk. Drs. H. Edi Saputra</h2><h2>Ibu Dra. Hj. Nurbainir</h2></div>
+            <div id="kel-flex"><h2>Kel. Bpk. Bad Guy</h2><h2>Ibu Bad Guy</h2></div>
             <div id="kel-flex"><h2>Kel. Alm. Drs. Dicky Akhmad Haidir</h2><h2>Ibu Enung Nurani</h2></div>
             </div>
         </div>
