--- a/src/site/content/feeds/kicikku-open-order.njk
+++ b/src/site/content/feeds/kicikku-open-order.njk
@@ -43,32 +43,56 @@ tags:
     <div id="second-poster">
         <img class="wrapper" src="/images/feeds/opening-hours-fish.jpg" />
         <h1 class="hours-title">OPENING HOURS</h1>
-        <div id="hours-company">
-            <div class="left-hour-item">
-            <h2>MONDAY</h2>
-            <p>09:45 - 16:30</p>
-            </div>
+        <div id="notice-company">
+            {# <div class="left-hour-item">
+                <h2>AVAILABLE FRESH</h2>
+                <h2>ON THE MARKET</h2>
+            </div> #}
             <div class="right-hour-item">
+                <h2>PLEASE</h2>
+                <h2>CASH ONLY</h2>
+            </div>
+            <div class="left-hour-item">
+                <h2>(SUMMER - AUTUMN)</h2>
+                <h2>EDITION</h2>
+            </div>
+            <div class="left-hour-item">
+                <h2>INCLUDED</h2>
+                <h2>TAXES</h2>
+            </div>
+        </div>
+        <div id="hours-company">
+            <div id="fresh-hour-item" class="left-hour-item">
+                <div id="fresh-notice">
+                    <h2>AVAILABLE FRESH</h2>
+                    <h2>ON THE MARKET</h2>
+                </div>
+                <div class="back-blur-item">
+                <h2>MONDAY</h2>
+                <p>09:45 - 16:30</p>
+                </div>
+            </div>
+            <div class="right-hour-item back-blur-item">
             <h2>TUESDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div class="left-hour-item">
+            <div class="left-hour-item back-blur-item">
             <h2>WEDNESDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div class="right-hour-item">
+            <div class="right-hour-item back-blur-item">
             <h2>THURSDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div class="left-hour-item">
+            <div class="left-hour-item back-blur-item">
             <h2>FRIDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div class="right-hour-item">
+            <div class="right-hour-item back-blur-item">
             <h2>SATURDAY</h2>
             <p>09:45 - 16:30</p>
             </div>
-            <div class="left-hour-item">
+            <div class="left-hour-item back-blur-item">
             <h2>SUNDAY</h2>
             <p>CLOSED</p>
             </div>
