--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -1,8 +1,8 @@
 ---
 layout: layouts/restrict-page.njk
-title: The Weeding of Rima and Ilman
+title: The Weeding of Princess and Bad guy
 thumbnail: 'https://kurva.xyz/images/rm/cover-6-og.jpg'
-alt: Picture of The Weeding of Rima and Ilman
+alt: Picture of The Weeding of Princess and Bad guy
 permalink: /{{ paged.url }}index.html
 renderData:
     title: "{{ paged.title }}"
@@ -36,7 +36,7 @@ pageScripts:
             <div class="invite-center" id="weeding-headline">
                 <h2>You are invited!</h2>
                 <h2>The Wedding of Beauty and Bad Guy</h2>
-                {# <img alt="Rima Ilman Logo" src="/images/rm/rima-ilham-logo.png"></img> #}
+                {# <img alt="Princess Bad guy Logo" src="/images/rm/rima-ilham-logo.png"></img> #}
             </div>
             <div class="region">
             <h2>Kepada Yth:</h2>
@@ -59,8 +59,9 @@ pageScripts:
 <div id="undangan-page">
     <div id="undangan-intro" class="region wrapper invite-center w-stack">
         {# <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img> #}
-        <img id="weeding-logo" alt="Weeding Logo" class="region" src="/images/rm/wedding-of-logo.png"></img>
-        <img id="rima-ilman-logo" alt="Rima Ilman Logo" class="region" src="/images/rm/rima-ilham-logo.png"></img>
+        {# <img id="weeding-logo" alt="Weeding Logo" class="region" src="/images/rm/wedding-of-logo.png"></img> #}
+        <h2 class="guest-name">Dear {{ paged.data.guestName }}</h2>
+        <img id="rima-ilman-logo" alt="Princess and Bad Guy Wedding" class="region" src="/images/rm/rima-ilham-logo.png"></img>
     </div>
     <div id="undangan-speech" class="wrapper invite-center">
         <div class="w-stack">
