neo interactive draft

--- a/src/site/content/feeds/flex-guide-origami.njk
+++ b/src/site/content/feeds/flex-guide-origami.njk
@@ -1,8 +1,8 @@
 ---
 layout: layouts/base.njk
-title: Flex Guide for Origami Poster Vertical
+title: Flex Guide for Origami Poster
 styleScripts:
-    - /css/kicikku-openorder.css
+    - /css/guide-origami.css
 draft: true
 tags: 
     - feeds
@@ -10,3 +10,53 @@ tags:
     - intermediate
     - in-progress
 ---
+
+<div id="origami-page">
+    <div class="replicate-first">
+        <img src="/images/feeds/nihon-tested.jpg" />
+        <div>
+        <div class="gami-boxes">
+            <div class="box-gami brown-gami">
+            </div>
+            <h1>FLE</h1>
+            <div class="box-gami blue-gami">
+            </div>
+            <h1>X-S</h1>
+            <div class="box-gami red-gami">
+            </div>
+            <h1>TART</h1>
+        </div>
+        <div id="boxes--flexend" class="gami-boxes">
+            <h1>FLE</h1>
+            <div class="box-gami green-gami">
+            </div>
+            <div class="box-gami">
+            </div>
+            <h1>X-E</h1>
+            <h1>ND</h1>
+            <div class="box-gami">
+            </div>
+        </div>
+        <div id="boxes__space-between" class="gami-boxes">
+            <div class="box-gami">
+            </div>
+            <h1>SPACE-</h1>
+            <div class="box-gami purple-gami">
+            </div>
+            <h1>BETWEEN</h1>
+            <div class="box-gami">
+            </div>
+        </div>
+        <div id="boxes__space-around" class="gami-boxes">
+            <div class="box-gami">
+            </div>
+            <h1>SPACE-</h1>
+            <div class="box-gami purple-gami">
+            </div>
+            <h1>AROUND</h1>
+            <div class="box-gami">
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
