--- a/src/site/content/feeds/neon-interactive-poster.njk
+++ b/src/site/content/feeds/neon-interactive-poster.njk
@@ -61,15 +61,17 @@ tags:
     </div>
 </div>
 <div class="neon-mainmenu">
-    <div class="dimsum-menu-item">
-        <h3>脚鸡</h3>
-        <h3>---- FOOT CHICKEN</h3>
-        <h3>$4,99</h3>
-    </div>
-    <div class="dimsum-menu-item">
-        <h3>脚鸡</h3>
-        <h3>---- FOOT CHICKEN</h3>
-        <h3>$4,99</h3>
-    </div>
+    {% for dimsum in restaurant.dimsums %}
+                <div class="dimsum-menu-item">
+                    <h3>{{ dimsum.attributes.chineseName }}</h3>
+                    <h3>---- {{ dimsum.attributes.englishName }}</h3>
+                    <h3>${{ dimsum.attributes.price }}</h3>
+                </div>
+        {# <div class="dimsum-menu-item">
+            <h3>脚鸡</h3>
+            <h3>---- FOOT CHICKEN</h3>
+            <h3>$4,99</h3>
+        </div> #}
+    {% endfor %}
 </div>
 </div> 
